result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: default
  labels:
    app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - result
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: result
          image: epitechcontent/t-dop-600-result:k8s
          resources:
            limits:
              memory: 128Mi
          ports:
            - containerPort: 80
