traefik.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-public
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
      nodePort: 30021
    - protocol: TCP
      port: 8080
      name: admin
      nodePort: 30042
  type: NodePort
